FIxed a bug when creating feasible solutions